# football-prediction-skill

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  design-qa.md  package.json  pyproject.toml  需求文档.md
.github/workflows/: ci.yml
docs/: architecture.md  data-contracts.md  v0.5-accuracy-architecture.md  v0.5-baseline-audit.md  v0.5-report-design.md
examples/: features.json  intel.json  market.json  tournament.json
scripts/: run-benchmark.py  validate-report.mjs
skill/football-prediction-skill/: SKILL.md
skill/football-prediction-skill/agents/: openai.yaml
skill/football-prediction-skill/references/: data-contracts.md  intelligence.md  sources.md  tournament.md
src/football_prediction/: __init__.py  cli.py  config.py  demo.py  domain.py  pipeline.py  prediction.py  storage.py
src/football_prediction/backtest/: __init__.py  daily.py  metrics.py  rolling.py
src/football_prediction/intelligence/: __init__.py  validator.py
src/football_prediction/modeling/: __init__.py  calibration.py  dixon_coles.py  ensemble.py  fusion.py  market_calibration.py  matrix.py  odds.py  registry.py  training.py
src/football_prediction/policy/: __init__.py  decision.py
src/football_prediction/providers/: __init__.py  api_football.py  base.py  features.py  football_data.py  market.py  names.py  sporttery.py
src/football_prediction/reporting/: __init__.py  analysis.py  flags.py  renderer.py  tournament.py  view_models.py
src/football_prediction/reporting/static/: report.css  report.js
src/football_prediction/reporting/templates/: report.html
src/football_prediction/reporting/templates/partials/: backtest.html  match_dialog.html  match_table.html  sources.html  status_bar.html
src/football_prediction/snapshots/: __init__.py  contracts.py  store.py
src/football_prediction/tournament/: __init__.py  simulator.py
tests/contract/: test_sporttery_provider.py
tests/fixtures/: sporttery_api.json  sporttery_official.json
tests/unit/: test_backtest.py  test_decision_policy.py  test_dixon_coles.py  test_features.py  test_flags.py  test_football_data.py  test_fusion.py  test_intelligence.py  test_names.py  test_odds.py  test_pipeline.py  test_prediction_pipeline.py  test_registry.py  test_reporting_analysis.py  test_snapshots.py  test_tournament.py  test_training.py
