[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-prediction-skill"
version = "0.5.1"
description = "分离方向与价值、事件时间可追溯的竞彩足球概率预测、回测与离线 HTML 研究台"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JetQiao" }]
keywords = ["agent-skill", "football", "sporttery", "dixon-coles", "backtest"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "duckdb>=1.3,<2",
  "Jinja2>=3.1,<4",
  "numpy>=1.26,<3",
  "platformdirs>=4.2,<5",
  "scipy>=1.12,<2",
]

[project.optional-dependencies]
test = ["coverage>=7.5"]
xg = ["soccerdata>=1.8"]
dev = ["coverage>=7.5", "ruff>=0.6"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.scripts]
football-predict = "football_prediction.cli:main"

[project.urls]
Homepage = "https://github.com/JetQiao/football-prediction-skill"
Issues = "https://github.com/JetQiao/football-prediction-skill/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
football_prediction = [
  "reporting/templates/*.html",
  "reporting/templates/partials/*.html",
  "reporting/static/*.css",
  "reporting/static/*.js",
  "reporting/assets/flags/*.png",
]
